--- a/recycle_talk/login.html
+++ b/recycle_talk/login.html
@@ -6,7 +6,9 @@
     <title>Welcome to trash talk</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
+<body class="login-background">
+    
+
     <div class="status-bar">
         <div class="status-bar__column"> <!--BEM(Block Element Modifier)-->
             <span>No service</span>
@@ -24,12 +26,12 @@
 
     <header class="welcome-header">
         <h1 class="welcome-header__title">Welcome to RecycleTalk</h1>
-        <p class="welcome-header__text">If you wanna get info about recycling trash, log in with your email or phone number</p>
+        <p class="welcome-header__text">쓰레기들과 대화하고 재활용에 대한 정보 얻어가세요:)<br>Talk to wastes and get infos about recycling!</p>
     </header>
 
     <form action="friends.html" method="GET" class="login-form">
-        <input class="login-form__input" type="text" placeholder="Email or phone number">
-        <input class="login-form__input" type="password" placeholder="password">
+        <input class="login-form__input" type="text" placeholder="Email or phone number" required>
+        <input class="login-form__input" type="password" placeholder="password" required>
         <input class="login-form__submit" type="submit" value="Log in">
         <a href="#">Find your account or password</a>
     </form>
