--- a/recycle_talk/index.html
+++ b/recycle_talk/index.html
@@ -8,7 +8,6 @@
 </head>
 <body class="login-background">
     
-
     <div class="status-bar">
         <div class="status-bar__column"> <!--BEM(Block Element Modifier)-->
             <span>No service</span>
@@ -36,7 +35,10 @@
         <a href="#">Find your account or password</a>
     </form>
 
-    
+    <div id="no-mobile">
+        <i class="fas fa-recycle"></i>
+        <span>화면 크기를 줄여주세요!</span>
+    </div>
 
     <script src="https://kit.fontawesome.com/6478f529f2.js"
 crossorigin="anonymous"></script>
