--- a/recycle_talk/chat-screen1.html
+++ b/recycle_talk/chat-screen1.html
@@ -73,7 +73,7 @@
             <div class="message-row__content">
                 <span class="message__author">우유팩</span>
                 <div class="message__info">
-                    <span class="message__bubble">나를 비롯한 종이컵, 멸균 우유팩 등은 전부<br>종이팩으로 재활용해야해.</span>
+                    <span class="message__bubble">나를 비롯한 종이컵, 멸균 우유팩 등은 전부 종이팩으로 재활용해야해.</span>
                     <span class="message__time">17:11</span>
                 </div>
             </div>
@@ -91,7 +91,7 @@
             <div class="message-row__content">
                 <span class="message__author">우유팩</span>
                 <div class="message__info">
-                    <span class="message__bubble">종이팩을 따로 모으지 않는 곳에선<br>종이류로 분리수거하면 돼.</span>
+                    <span class="message__bubble">종이팩을 따로 모으지 않는 곳에선 종이류로 분리수거하면 돼.</span>
                     <span class="message__time">17:12</span>
                 </div>
             </div>
