--- a/recycle_talk/chat-screen4.html
+++ b/recycle_talk/chat-screen4.html
@@ -65,7 +65,7 @@
             <div class="message-row__content">
                 <span class="message__author">컵라면</span>
                 <div class="message__info">
-                    <span class="message__bubble">내가 작은컵 큰컵 플라스틱 애들 모아서<br>단체로 선탠 한번 했거든? 다사라짐;;</span>
+                    <span class="message__bubble">내가 작은컵 큰컵 플라스틱 애들 모아서 단체로 선탠 한번 했거든? 다사라짐;;</span>
                     <span class="message__time">14:01</span>
                 </div>
             </div>
@@ -75,7 +75,7 @@
             <div class="message-row__content">
                 <span class="message__author">컵라면</span>
                 <div class="message__info">
-                    <span class="message__bubble">그 붉은 색 내는게 산소랑 광선에 산화된대<br>그래서 고춧가루 뿐만 아니야. 카레도 됨.</span>
+                    <span class="message__bubble">그 붉은 색 내는게 산소랑 광선에 산화된대.<br>그래서 고춧가루 뿐만 아니야. 카레도 됨.</span>
                     <span class="message__time">14:01</span>
                 </div>
             </div>
@@ -85,7 +85,7 @@
             <div class="message-row__content">
                 <span class="message__author">컵라면</span>
                 <div class="message__info">
-                    <span class="message__bubble">일단 물로 최대한 씻고 햇빛에 한 며칠<br>놔둬봐 진짜 마법같음.</span>
+                    <span class="message__bubble">일단 물로 최대한 씻고 햇빛에 한 며칠 놔둬봐 진짜 마법같음.</span>
                     <span class="message__time">14:02</span>
                 </div>
             </div>
