--- a/recycle_talk/chat-screen2.html
+++ b/recycle_talk/chat-screen2.html
@@ -72,7 +72,7 @@
             <div class="message-row__content">
                 <span class="message__author">칫솔</span>
                 <div class="message__info">
-                    <span class="message__bubble">나도 빨대도 플라스틱은 맞는데 <br>너무 작아서 재활용이 안돼.</span>
+                    <span class="message__bubble">나도 빨대도 플라스틱은 맞는데 너무 작아서 재활용이 안돼.</span>
                     <span class="message__time">17:05</span>
                 </div>
             </div>
@@ -90,7 +90,7 @@
         <div class="message-row message-row--own">
             <div class="message-row__content">
                 <div class="message__info">
-                    <span class="message__bubble">이럴수가!</span>
+                    <span class="message__bubble">헐,,</span>
                     <span class="message__time">17:06</span>
                 </div>
             </div>
@@ -100,7 +100,7 @@
             <div class="message-row__content">
                 <span class="message__author">빨대</span>
                 <div class="message__info">
-                    <span class="message__bubble">나랑 볼펜, 칫솔같은 작은 플라스틱류는<br>업체에서 일반쓰레기로 버려져.<br>웬만하면 쓰지 않는 게 좋아..</span>
+                    <span class="message__bubble">나랑 볼펜, 칫솔같은 작은 플라스틱류는 재활용 업체에서 일반쓰레기로 버려져. 그래서 웬만하면 쓰지 않는 게 좋아..</span>
                     <span class="message__time">17:12</span>
                 </div>
             </div>
@@ -110,7 +110,7 @@
             <div class="message-row__content">
                 <span class="message__author">칫솔</span>
                 <div class="message__info">
-                    <span class="message__bubble">요즘은 대나무 칫솔이나 다회용 빨대<br>많이 파니까 관심 있으면 한번 봐봐!</span>
+                    <span class="message__bubble">요즘은 대나무 칫솔이나 다회용 빨대 많이 파니까 관심 있으면 한번 봐봐!</span>
                     <span class="message__time">17:18</span>
                 </div>
             </div>
