--- a/recycle_talk/chat-screen3.html
+++ b/recycle_talk/chat-screen3.html
@@ -105,6 +105,10 @@
             </div>
         </div>
 
+        <div class="endofchat">
+            <div>end of chat</div> 
+        </div>
+
     </main>
 
     <form class="reply">
