--- a/recycle_talk/more.html
+++ b/recycle_talk/more.html
@@ -71,29 +71,29 @@
             <h6>Upcycling Brands</h6>
             <div class="more-screen__links">
                 <a href="http://nukak.kr/" target="_blank">
-                    <img src="https://m.nukak.kr/web/upload/editor/blanca/logo_nukak.png">
+                    <img src="image/logo_nukak.png">
                     <span>Nukak</span>
                 </a>
                 <a href="https://pleatsmama.com/" target="_blank">
-                    <img src="https://cdn.imweb.me/thumbnail/20210201/ec15d1bcf6d5d.png">
+                    <img src="image/pleatsmama.png">
                     <span>Pleats Mama</span>
                 </a>
                 <a href="https://www.cueclyp.com/" target="_blank">
-                    <img src="https://contents.sixshop.com/thumbnails/uploadedFiles/117506/default/image_1585722554019_1500.png">
+                    <img src="image/cueclyp.png">
                     <span>Cueclyp</span>
                 </a>
             </div>
             <div class="more-screen__links">
                 <a href="http://milkyproject.com/" target="_blank">
-                    <img src="https://lh3.googleusercontent.com/proxy/79mdmBycVPvYrwRv3BkqgaqBwguRzEZUvnPVWYhVKRRZm5lquPBCzDPnIeVo-imkSn_MlBld3hZYhUX1iZpCl502FxE922D-X2aPe9QFCTtsc1c">
+                    <img src="image/milky_project.png">
                     <span>Milky Project</span>
                 </a>
                 <a href="http://xn--zf4bt3b85e.com/" target="_blank">
-                    <img src="http://우시산.com/thema/Basic/assets/img/logo.png">
+                    <img src="image/woosisan.png">
                     <span>우시산</span>
                 </a>
                 <a href="http://wecontinew.co.kr/" target="_blank">
-                    <img src="http://m.wecontinew.com/web/continew/continew-earth-b.png">
+                    <img src="image/continew.png">
                     <span>Continuew</span>
                 </a>
             </div>
