--- a/recycle_talk/chat-screen1.html
+++ b/recycle_talk/chat-screen1.html
@@ -114,6 +114,9 @@
                 </div>
             </div>
         </div>
+        <div class="endofchat">
+            <div>end of chat</div> 
+        </div>
 
     </main>
 
