--- a/recycle_talk/chat-screen2.html
+++ b/recycle_talk/chat-screen2.html
@@ -116,6 +116,10 @@
             </div>
         </div>
 
+        <div class="endofchat">
+            <div>end of chat</div> 
+        </div>
+
     </main>
 
     <form class="reply">
