--- a/recycle_talk/chat-screen4.html
+++ b/recycle_talk/chat-screen4.html
@@ -91,6 +91,10 @@
             </div>
         </div>
 
+        <div class="endofchat">
+            <div>end of chat</div> 
+        </div>
+        
     </main>
 
     <form class="reply">
