--- a/recycle_talk/chat-screen5.html
+++ b/recycle_talk/chat-screen5.html
@@ -108,6 +108,9 @@
                 </div>
             </div>
         </div>
+        <div class="endofchat">
+            <div>end of chat</div> 
+        </div>
 
     </main>
 
