--- a/recycle_talk/setting.html
+++ b/recycle_talk/setting.html
@@ -85,6 +85,13 @@
             </li>
             <li class="settings__setting">
                 <div class="settings__column">
+                    <i class="fas fa-pencil-alt"></i>
+                    <span>Drawing</span>
+                </div>
+                <div class="settings__des">by 2unbini</div>
+            </li>
+            <li class="settings__setting">
+                <div class="settings__column">
                     <i class="far fa-thumbs-up"></i>
                     <span>Thanks</span>
                 </div>
