--- a/recycle_talk/friends.html
+++ b/recycle_talk/friends.html
@@ -55,7 +55,7 @@
             
             <div class="user-component">
                 <div class="user-component__column">
-                    <img src="./image/pot.jpg" class="user-component__photo user-component__photo--sm">
+                    <img src="./image/pot.jpg" class="user-component__photo user-component__photo--sm profile_photo">
                     <div class="user-component__text">
                         <h4 class="user-component__name user-component__name--not-bold">내열유리</h4>
                         <h6 class="user-component__status">이거 내열유리야 이 *$#야!</h6>
@@ -66,7 +66,7 @@
             </div>
             <div class="user-component">
                 <div class="user-component__column">
-                    <img src="./image/bottle.jpg" class="user-component__photo user-component__photo--sm">
+                    <img src="./image/bottle.jpg" class="user-component__photo user-component__photo--sm profile_photo">
                     <div class="user-component__text">
                         <h4 class="user-component__name user-component__name--not-bold">물병</h4>
                         <h6 class="user-component__status">껍데기 없는 삶^^</h6>
@@ -77,7 +77,7 @@
 
             <div class="user-component">
                 <div class="user-component__column">
-                    <img src="./image/straw.jpg" class="user-component__photo user-component__photo--sm">
+                    <img src="./image/straw.jpg" class="user-component__photo user-component__photo--sm profile_photo">
                     <div class="user-component__text">
                         <h4 class="user-component__name user-component__name--not-bold">빨대</h4>
                         <h6 class="user-component__status">미안해...</h6>
@@ -88,7 +88,7 @@
             </div>
             <div class="user-component">
                 <div class="user-component__column">
-                    <img src="./image/icepack.jpg" class="user-component__photo user-component__photo--sm">
+                    <img src="./image/icepack.jpg" class="user-component__photo user-component__photo--sm profile_photo">
                     <div class="user-component__text">
                         <h4 class="user-component__name user-component__name--not-bold">아이스팩</h4>
                         <h6 class="user-component__status">한번 더 써주지 않겠니?</h6>
@@ -99,7 +99,7 @@
             </div>
             <div class="user-component">
                 <div class="user-component__column">
-                    <img src="./image/milk.jpg" class="user-component__photo user-component__photo--sm">
+                    <img src="./image/milk.jpg" class="user-component__photo user-component__photo--sm profile_photo">
                     <div class="user-component__text">
                         <h4 class="user-component__name user-component__name--not-bold">우유팩</h4>
                         <h6 class="user-component__status">나 종이 아니라고!!!</h6>
@@ -110,7 +110,7 @@
             </div>
             <div class="user-component">
                 <div class="user-component__column">
-                    <img src="./image/bag.jpg" class="user-component__photo user-component__photo--sm">
+                    <img src="./image/bag.jpg" class="user-component__photo user-component__photo--sm profile_photo">
                     <div class="user-component__text">
                         <h4 class="user-component__name user-component__name--not-bold">종량제봉투</h4>
                         <h6 class="user-component__status">모르는 거 있으면 톡ㄱ</h6>
@@ -121,7 +121,7 @@
             </div>
             <div class="user-component">
                 <div class="user-component__column">
-                    <img src="./image/cupramyeon.jpg" class="user-component__photo user-component__photo--sm">
+                    <img src="./image/cupramyeon.jpg" class="user-component__photo user-component__photo--sm profile_photo">
                     <div class="user-component__text">
                         <h4 class="user-component__name user-component__name--not-bold">컵라면</h4>
                         <h6 class="user-component__status">빨간 국물은 원래 하얗다...</h6>
@@ -132,7 +132,7 @@
             </div>
             <div class="user-component">
                 <div class="user-component__column">
-                    <img src="./image/box.jpg" class="user-component__photo user-component__photo--sm">
+                    <img src="./image/box.jpg" class="user-component__photo user-component__photo--sm profile_photo">
                     <div class="user-component__text">
                         <h4 class="user-component__name user-component__name--not-bold">택배박스</h4>
                         <h6 class="user-component__status">테이프 떼라</h6>
