--- a/recycle_talk/chat-screen3.html
+++ b/recycle_talk/chat-screen3.html
@@ -53,7 +53,7 @@
             <div class="message-row__content">
                 <span class="message__author">종량제봉투</span>
                 <div class="message__info">
-                    <span class="message__bubble">맞아, 전단지는 코팅지라 일반쓰레기로 버려야 해.</span>
+                    <span class="message__bubble">맞아, 전단지는 <strong>코팅지라 일반쓰레기</strong>로 버려야 해.</span>
                     <span class="message__time">15:55</span>
                 </div>
             </div>
@@ -71,7 +71,7 @@
             <div class="message-row__content">
                 <span class="message__author">종량제봉투</span>
                 <div class="message__info">
-                    <span class="message__bubble">사실이야. 빨대나 작은 숟가락, 포크, 양념그릇 그리고 칫솔이나 장난감처럼 여러 재질이 섞인 친구들은 나와 함께 갈 애들이야.</span>
+                    <span class="message__bubble">사실이야. 빨대나 작은 숟가락, 포크, 양념그릇 그리고 칫솔이나 장난감처럼 <strong>여러 재질이 섞인</strong> 친구들은 나와 함께 갈 애들이야.</span>
                     <span class="message__time">15:56</span>
                 </div>
             </div>
@@ -81,7 +81,7 @@
             <div class="message-row__content">
                 <span class="message__author">종량제봉투</span>
                 <div class="message__info">
-                    <span class="message__bubble">음식물이 지워지지 않는 플라스틱 용기나 종이류도 모두 재활용 대상이 아니야. 다만! 세척이 되면 재활용 해야 해!</span>
+                    <span class="message__bubble">음식물이 <strong>지워지지 않는</strong> 플라스틱 용기나 종이류도 모두 재활용 대상이 아니야. 다만! 세척이 되면 재활용 해야 해!</span>
                     <span class="message__time">15:56</span>
                 </div>
             </div>
@@ -99,7 +99,7 @@
             <div class="message-row__content">
                 <span class="message__author">종량제봉투</span>
                 <div class="message__info">
-                    <span class="message__bubble">음식물은 음식물 쓰레기로, 라면이나 과자 봉지,  한약이나 각종 비닐봉지는 씻어서 재활용해야 하고<br>랩도 씻으면 재활용이 되니 종량제에 버리지 말자!</span>
+                    <span class="message__bubble">음식물은 <strong>음식물 쓰레기</strong>로!<br>라면이나 과자 봉지, 한약이나 각종 <strong>비닐봉지는 씻어서 재활용!</strong><br>랩도 <strong>씻으면 재활용</strong>이 되니 종량제에 버리지 말자!</span>
                     <span class="message__time">15:58</span>
                 </div>
             </div>
