--- a/recycle_talk/chat-screen4.html
+++ b/recycle_talk/chat-screen4.html
@@ -75,7 +75,7 @@
             <div class="message-row__content">
                 <span class="message__author">컵라면</span>
                 <div class="message__info">
-                    <span class="message__bubble">그 붉은 색 내는게 산소랑 광선에 산화된대.<br>그래서 고춧가루 뿐만 아니야. 카레도 됨.</span>
+                    <span class="message__bubble">그 붉은 색 내는게 산소랑 광선에 산화된대. 그래서 고춧가루 뿐만 아니라 카레도 됨.</span>
                     <span class="message__time">14:01</span>
                 </div>
             </div>
@@ -85,13 +85,13 @@
             <div class="message-row__content">
                 <span class="message__author">컵라면</span>
                 <div class="message__info">
-                    <span class="message__bubble">일단 물로 최대한 씻고 햇빛에 한 며칠 놔둬봐 진짜 마법같음.</span>
+                    <span class="message__bubble">물로 최대한 씻고 햇빛에 한 며칠 놔둬봐 마법같이 사라짐!<br>그럼 나도 재활용 가능함ㅎ</span>
                     <span class="message__time">14:02</span>
                 </div>
             </div>
         </div>
 
-        <div class="endofchat">
+        <div class="endofchat end-4">
             <div>end of chat</div> 
         </div>
         
