--- a/recycle_talk/friends.html
+++ b/recycle_talk/friends.html
@@ -38,8 +38,8 @@
             <div class="user-component__column">
                 <img src="./image/me.png" class="user-component__photo user-component__photo--xl">
                 <div class="user-component__text">
-                    <h4 class="user-component__name">나</h4>
-                    <h6 class="user-component__status">내일 분리수거날임!! 도움!</h6>
+                    <h4 class="user-component__name friends-userName">나</h4>
+                    <h6 class="user-component__status friends-userWord">내일 분리수거날임!! 도움!</h6>
                 </div>
             </div>
             <div class="user-component__column"></div>
@@ -168,6 +168,7 @@
         <span>화면 크기를 줄여주세요!</span>
     </div>
 
+    <script src="js/friends.js"></script>
     <script src="https://kit.fontawesome.com/6478f529f2.js"
 crossorigin="anonymous"></script>
 </body>
