--- a/recycle_talk/chat-screen1.html
+++ b/recycle_talk/chat-screen1.html
@@ -114,7 +114,7 @@
                 </div>
             </div>
         </div>
-        <div class="endofchat">
+        <div class="endofchat end-1">
             <div>end of chat</div> 
         </div>
 
