--- a/recycle_talk/chat-screen2.html
+++ b/recycle_talk/chat-screen2.html
@@ -100,7 +100,7 @@
             <div class="message-row__content">
                 <span class="message__author">빨대</span>
                 <div class="message__info">
-                    <span class="message__bubble">나랑 볼펜, 칫솔같은 작은 플라스틱류는 재활용 업체에서 일반쓰레기로 버려져. 그래서 웬만하면 쓰지 않는 게 좋아..</span>
+                    <span class="message__bubble">우리는 <strong>선별 기계에 자주 껴서</strong> 분류 작업에 어려움을 줘. 그래서 일반 쓰레기로 분류되니 웬만하면 쓰지 않는 게 좋아..</span>
                     <span class="message__time">17:12</span>
                 </div>
             </div>
@@ -110,13 +110,13 @@
             <div class="message-row__content">
                 <span class="message__author">칫솔</span>
                 <div class="message__info">
-                    <span class="message__bubble">요즘은 대나무 칫솔이나 다회용 빨대 많이 파니까 관심 있으면 한번 봐봐!</span>
+                    <span class="message__bubble">요즘은 <strong>대나무 칫솔이나 다회용 빨대</strong> 많이 파니까 관심 있으면 한번 봐봐!</span>
                     <span class="message__time">17:18</span>
                 </div>
             </div>
         </div>
 
-        <div class="endofchat">
+        <div class="endofchat end-2">
             <div>end of chat</div> 
         </div>
 
