--- a/recycle_talk/chat-screen5.html
+++ b/recycle_talk/chat-screen5.html
@@ -63,7 +63,7 @@
             <div class="message-row__content">
                 <span class="message__author">비닐봉투</span>
                 <div class="message__info">
-                    <span class="message__bubble">비닐봉투예요. 음식물이나 스티커같은 거 깨끗이 제거하면 투명, 검정, 색깔있는애들 상관 없이 다 재활용 가능합니다.</span>
+                    <span class="message__bubble">비닐봉투예요. 음식물이나 스티커같은 거 <strong>깨끗이 제거하면</strong> 투명, 검정, 색깔있는애들 상관 없이 다 재활용 가능합니다.</span>
                     <span class="message__time">12:14</span>
                 </div>
             </div>
@@ -73,7 +73,7 @@
             <div class="message-row__content">
                 <span class="message__author">비닐포장재</span>
                 <div class="message__info">
-                    <span class="message__bubble">안녕하세요, 비닐포장재입니다. 저도 봉투님처럼 깨끗하면 재활용 가능하니 많이 이용해주세요^^<br>참고로 빵봉지, 잡지나 노트 포장 비닐 모두 해당됩니다^^*</span>
+                    <span class="message__bubble">안녕하세요, 비닐포장재입니다. 저도 봉투님처럼 <strong>깨끗하면</strong> 재활용 가능하니 많이 이용해주세요^^<br>참고로 빵봉지, 잡지나 노트 포장 비닐 모두 해당됩니다^^*</span>
                     <span class="message__time">12:16</span>
                 </div>
             </div>
@@ -83,7 +83,7 @@
             <div class="message-row__content">
                 <span class="message__author">믹스</span>
                 <div class="message__info">
-                    <span class="message__bubble">카피믹스요. 나도 씻으면 댑니다. 안씻꺼지면 일반으로 버리새요.</span>
+                    <span class="message__bubble">카피믹스요. 나도 <strong>씻으면</strong> 댑니다. 안씻꺼지면 일반으로 버리새요.</span>
                     <span class="message__time">12:16</span>
                 </div>
             </div>
@@ -93,7 +93,7 @@
             <div class="message-row__content">
                 <span class="message__author">plastic Wrap</span>
                 <div class="message__info">
-                    <span class="message__bubble">여러분 저는 랩입니다. 저 재활용 되구요, 일쓰(일반쓰레기)로 버리면 안돼요. 저도 순정이 있습니다. 재활용 해주세요.</span>
+                    <span class="message__bubble">여러분 저는 랩입니다. 저 <strong>재활용 되구요,</strong> 일쓰(일반쓰레기)로 버리면 안돼요. 저도 순정이 있습니다. 재활용 해주세요.</span>
                     <span class="message__time">12:18</span>
                 </div>
             </div>
@@ -103,12 +103,12 @@
             <div class="message-row__content">
                 <span class="message__author">과자봉지</span>
                 <div class="message__info">
-                    <span class="message__bubble">안녕하세요, 과자봉지입니다. 저는 라면봉지님 소개로 참여하게 됐는데요<br>저희 과자봉지들은 대개 기름기와 과자 찌꺼기가 남아있는데, 저도 이 것들만 잘 제거하면 재활용될 수 있답니다.</span>
+                    <span class="message__bubble">안녕하세요, 과자봉지입니다. 저는 라면봉지님 소개로 참여하게 됐는데요<br>저희 과자봉지들은 대개 기름기와 과자 찌꺼기가 남아있는데, 저도 <strong>이 것들만 잘 제거하면</strong> 재활용될 수 있답니다.</span>
                     <span class="message__time">12:20</span>
                 </div>
             </div>
         </div>
-        <div class="endofchat">
+        <div class="endofchat end-5">
             <div>end of chat</div> 
         </div>
 
