--- a/recycle_talk/index.html
+++ b/recycle_talk/index.html
@@ -25,13 +25,13 @@
 
     <header class="welcome-header">
         <h1 class="welcome-header__title">Welcome to RecycleTalk</h1>
-        <p class="welcome-header__text">쓰레기들과 대화하고 재활용에 대한 정보 얻어가세요:)<br>Talk to wastes and get infos about recycling!</p>
+        <p class="welcome-header__text">쓰레기들과 대화하고 재활용에 대해 알아보아요 :D<br>Talk to wastes and get infos about recycling!</p>
     </header>
 
-    <form action="friends.html" method="GET" class="login-form">
-        <input class="login-form__input" type="text" placeholder="Email or phone number" required>
-        <input class="login-form__input" type="password" placeholder="password" required>
-        <input class="login-form__submit" type="submit" value="Log in">
+    <form action="friends.html" onsubmit="callme()" class="login-form">
+        <input class="login-form__input tbName" type="text" placeholder="프로필 이름을 입력해주세요" required>
+        <input class="login-form__input tbWord" type="text" placeholder="프로필 문구를 입력해주세요" required>
+        <input class="login-form__submit" type="submit" value="Log in!">
         <a href="#">Find your account or password</a>
     </form>
 
@@ -39,7 +39,8 @@
         <i class="fas fa-recycle"></i>
         <span>화면 크기를 줄여주세요!</span>
     </div>
-
+    
+    <script src="js/index.js"></script>
     <script src="https://kit.fontawesome.com/6478f529f2.js"
 crossorigin="anonymous"></script>
 </body>
