--- a/recycle_talk/chat-screen3.html
+++ b/recycle_talk/chat-screen3.html
@@ -105,7 +105,7 @@
             </div>
         </div>
 
-        <div class="endofchat">
+        <div class="endofchat end-3">
             <div>end of chat</div> 
         </div>
 
